--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.5.2
 distlib==0.3.4
+dj-database-url==0.5.0
 Django==4.0.4
+django-heroku==0.3.1
+django-on-heroku==1.1.2
 filelock==3.7.0
 gunicorn==20.1.0
 platformdirs==2.5.2
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
 virtualenv==20.14.1
 virtualenvwrapper-win==1.2.7
+whitenoise==6.1.0
